@@ -1,3 +1,8 @@
+2011-02-19  Doug Hellmann  <dhellmann@racemi.com>
+
+	* rst2marsedit/main.py: Change use of "with" to make the script
+	work on older versions of Python.
+
 2010-06-17  Doug Hellmann  <doug.hellmann@gmail.com>
 
 	* rst2marsedit/SendToMarsEdit.applescript: Read the file as UTF-8 encoded text.
